continued with the funciton

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="form">
         <label for="guessField">Enter a guess: </label>
-        <input type="text" min="1" required id="guessField" class="guessField">
+        <input type="text" required id="guessField" class="guessField">
         <input type="submit" value="Submit guess" class="guessSubmit">
       </div>
 
